fix footer height on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -269,6 +269,9 @@ nav a {
     #outer-container10 {
         margin-top: -10%;
     }
+    .footer-items {
+        height: 75px;
+    }
 }
 
 /* Make class page-items center horizontally */
